--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Poppins:wght@400;500;700&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
   color: white;
+  box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+html {
+  scroll-behavior: smooth;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  background-color: black;
+}
+
+.chat-interface {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.outer-container {
+  width: 90%;
+  height: 90vh;
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  padding: 32px 32px 0px 32px;
+  background-color: rgb(59, 47, 47);
+  border-radius: 32px;
+}
+
+.output-window {
+  height: 80vh;
+  border-radius: 32px;
+  background-color: rgb(70, 61, 61);
+  padding: 12px;
+}
+
+.input-window {
+  height: 10vh;
+  padding: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-textbox {
+  width: 80%;
+  height: fit-content;
+  font-size: large;
+  padding: 12px;
+  border-radius: 12px;
+}
+
+.send-icon {
+  font-size: xx-large;
+  margin-left: 12px;
 }
